--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # 範例環境變數（不要把真實 token 推到 repo）
-TG_BOT_TOKEN=your_bot_token_here
-TG_CHAT_ID=your_chat_id_here
+TG_BOT_TOKEN=8329906080:AAG7y7nIBfq0EPIcxnJi1dRQNPJhObvREcw
+TG_CHAT_ID=8013998184
 FUTUNN_API_URL=https://news.futunn.com/news-site-api/main/get-flash-list?pageSize=30
 SENT_KEYS_FILE=futunn_sent_news_ids.json
 MIN_INTERVAL_MS=10000
